--- a/cocktails.html
+++ b/cocktails.html
@@ -54,7 +54,7 @@
             Sort
         </span>
         <select id="sortBy">
-            <option value="Strength">Strength</option>
+            <!-- <option value="Strength">Strength</option> -->
             <option value="Sweet">Sweet</option>
             <option value="Bitter">Bitter</option>
             <option value="Sour">Sour</option>
