reformatted front page

--- a/cocktails.html
+++ b/cocktails.html
@@ -31,7 +31,7 @@
 		<script src="./lib/fontawesome.js"></script>
 
 	</head>
-	<body>
+	<body id='cocktailPage'>
 
         
         <div id="titleGroup">
@@ -56,10 +56,6 @@
         <span>
             View
         </span>
-        <!-- <span>
-            <a href="#">Classic</a>
-            <a href="#">Cards</a>
-        </span> -->
         <select id="displayMode">
             <option value="Classic">Menu</option>
             <option value="Cards">Recipes</option>
