--- a/remix_doctor.html
+++ b/remix_doctor.html
@@ -9,16 +9,13 @@
 		<script type="text/javascript" src="./lib/jquery.min.js"></script>
 		<!-- jQuery UI-->
 		<script src="./lib/jquery-ui.min.js"></script>
-		<!-- Bootstrap-->
-		<script src="./lib/popper.min.js"></script>
-		<script src="./lib/bootstrap.min.js"></script>
 		<!-- My Style Sheet -->
 		<link href="./css/stylesheet.css" rel="stylesheet" type="text/css" />
 		<!-- My JavaScript functions -->
 		<script src="./lib/index.js"></script>
+		<script src="./lib/remixer.js"></script>
 		<!-- Font Awesome, for graphics icons -->
 		<script src="./lib/fontawesome.js"></script>
-		<script src="./lib/require.js"></script>
 
 	</head>
 	
