--- a/cocktails.html
+++ b/cocktails.html
@@ -37,12 +37,12 @@
         <div id="titleGroup">
             <div id="menuTitle">
                 Dulce Como Piña
-                <span id='spotifyButton'><i class="fab fa-spotify"></i></iframe></span>
+                <!-- <span id='spotifyButton'><i class="fab fa-spotify"></i></iframe></span> -->
                 
             </div>
-            <div id="menuBlurb">Like Rihanna's forehead, bitch, you gotta think big - Junglepu$$y</div>    
+            <!-- <div id="menuBlurb">Like Rihanna's forehead, bitch, you gotta think big - Junglepu$$y</div>     -->
         </div>
-
+        <!-- 
         <div id='spotifyPlaylist'>
             <iframe 
                 src="https://open.spotify.com/embed/playlist/11FMt3OBH9rvIrXrPSpM1Z"
@@ -50,29 +50,32 @@
                 allowtransparency="true"
                 allow="encrypted-media">
             </iframe>
+        </div> -->
+
+
+        <div id='cocktailMenuOptions'>
+            <span>
+                View
+            </span>
+            <select id="displayMode">
+                <option value="Classic">Menu</option>
+                <option value="Cards">Recipes</option>
+            </select>
+            <span>
+                Sort
+            </span>
+            <select id="sortBy">
+                <!-- <option value="Strength">Strength</option> -->
+                <option value="Sweet">Sweet</option>
+                <option value="Bitter">Bitter</option>
+                <option value="Sour">Sour</option>
+                <option value="ABV">ABV</option>
+            </select>
+
+            <span id="floatSelect" style="color: rgb(41, 41, 41);"><i class="fas fa-th-large"></i></span>
+            <span id="rowsSelect"><i class="fas fa-align-justify"></i></span>
         </div>
 
-
-        <span>
-            View
-        </span>
-        <select id="displayMode">
-            <option value="Classic">Menu</option>
-            <option value="Cards">Recipes</option>
-        </select>
-        <span>
-            Sort
-        </span>
-        <select id="sortBy">
-            <!-- <option value="Strength">Strength</option> -->
-            <option value="Sweet">Sweet</option>
-            <option value="Bitter">Bitter</option>
-            <option value="Sour">Sour</option>
-            <option value="ABV">ABV</option>
-        </select>
-
-        <span id="floatSelect"><i class="fas fa-th-large"></i></span>
-        <span id="rowsSelect"><i class="fas fa-align-justify"></i></span>
 
         <hr>
         
