--- a/index.html
+++ b/index.html
@@ -25,105 +25,106 @@
 				<a href='#' class='menuLink'>HOME</a> 
 				<a href='./cocktails.html' class='menuLink'>COCKTAILS</a>
 				<a href='#' class='menuLink'>ABOUT</a>
+				test
 			</div>
 			
 		</div>
 
 		<div class='section'>
 			<div>	
-				<video class='animation-video' autoplay loop muted playsinline>
+				<video class='animation-video' autoplay loop muted playsinline controls="true">
 					<!-- <source src="./videos/lowq/raissa-1.webm" type="video/webm" /> -->
 					<source src="./videos/lowq/raissa-1.mp4" type="video/mp4" />
 				</video>
 			</div>
 
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<!-- <source src="./videos/lowq/raissa2.webm" type="video/webm" /> -->
 				<source src="./videos/lowq/raissa2.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video'  autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/abstract_1.webm" type="video/webm" />
 				<source src="./videos/lowq/abstract_1.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/abstract_2.webm" type="video/webm" />
 				<source src="./videos/lowq/abstract_2.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/alien_1.webm" type="video/webm" />
 				<source src="./videos/lowq/alien_1.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/alien_2.webm" type="video/webm" />
 				<source src="./videos/lowq/alien_2.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/alien_3.webm" type="video/webm" />
 				<source src="./videos/lowq/alien_3.mp4" type="video/mp4" />
 			</video>
 			
-			<video style="width: 90.8%;" autoplay loop muted playsinline>
+			<video style="width: 90.8%;" autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/sos-wide.webm" type="video/webm" />
 				<source src="./videos/lowq/sos-wide.mp4" type="video/mp4" />
 			</video>
 
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/car1.webm" type="video/webm" />
 				<source src="./videos/lowq/car1.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/car-2.webm" type="video/webm" />
 				<source src="./videos/lowq/car-2.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/init-track.webm" type="video/webm" />
 				<source src="./videos/lowq/init-track.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/lips_1.webm" type="video/webm" />
 				<source src="./videos/lowq/lips_1.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/picture-burn.webm" type="video/webm" />
 				<source src="./videos/lowq/picture-burn.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/planet.webm" type="video/webm" />
 				<source src="./videos/lowq/planet.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/moon1.webm" type="video/webm" />
 				<source src="./videos/lowq/moon1.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/moon2.webm" type="video/webm" />
 				<source src="./videos/lowq/moon2.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/moon3.webm" type="video/webm" />
 				<source src="./videos/lowq/moon3.mp4" type="video/mp4" />
 			</video>
 			
 			<!-- 
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/sick.webm" type="video/webm" />
 				<source src="./videos/lowq/sick.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/sos.webm" type="video/webm" />
 				<source src="./videos/lowq/sos.mp4" type="video/mp4" />
 			</video>
-			<video class='animation-video' autoplay loop muted playsinline>
+			<video class='animation-video' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/progress.webm" type="video/webm" />
 				<source src="./videos/lowq/progress.mp4" type="video/mp4" />
 			</video> -->
 
 
-			<video id='animation-frosty-trophies' autoplay loop muted playsinline>
+			<video id='animation-frosty-trophies' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/frosty-and-trophies.webm" type="video/webm" />
 				<source src="./videos/lowq/frosty-and-trophies.mp4" type="video/mp4" />
 			</video>
-			<video id='animation-car-rotate' autoplay loop muted playsinline>
+			<video id='animation-car-rotate' autoplay loop muted playsinline controls="true">
 				<source src="./videos/lowq/car-rotate-preview.webm" type="video/webm" />
 				<source src="./videos/lowq/car-rotate-preview.mp4" type="video/mp4" />
 			</video>
@@ -185,7 +186,7 @@
 				<i class="fas fa-times"></i>
 			</div>
 
-			<video id='hiq-overlay' autoplay loop muted playsinline>
+			<video id='hiq-overlay' autoplay loop muted playsinline controls="true">
 				<source src="./videos/hiq/abstract_1.webm" type="video/webm" />
 				<source src="./videos/hiq/abstract_1.mp4" type="video/mp4" />
 			</video>
