--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			
 		</div>
 
-		<div class='section'>
+		<div id='mainSection' class='section'>
 			<div>	
 				<video class='animation-video' autoplay loop muted playsinline>
 					<!-- <source src="./videos/lowq/raissa-1.webm" type="video/webm" /> -->
