--- a/cocktails.html
+++ b/cocktails.html
@@ -32,6 +32,14 @@
 
 	</head>
 	<body id='cocktailPage'>
+		
+		<div id='menuBar'>
+			<a href='./index.html' class='menuLink'>HOME</a> 
+			<a href='#' class='menuLink'>COCKTAILS</a>
+			<!-- <img id='viezzo-logo' src="./images/graphics/viezzo-logo.png" alt=""> -->
+			<a href='#' class='menuLink'>ABOUT</a>
+			<a href='./graphics.html' class='menuLink'>GRAPHICS</a>
+		</div>
 
         
         <div id="titleGroup">
