--- a/cocktails.html
+++ b/cocktails.html
@@ -30,15 +30,19 @@
 		<!-- Font Awesome, for graphics icons -->
 		<script src="./lib/fontawesome.js"></script>
 
+        
+		<!-- Fonts from Google -->
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans'>
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
+
 	</head>
 	<body id='cocktailPage'>
 		
-		<div id='menuBar'>
-			<a href='./index.html' class='menuLink'>HOME</a> 
-			<a href='#' class='menuLink'>COCKTAILS</a>
-			<!-- <img id='viezzo-logo' src="./images/graphics/viezzo-logo.png" alt=""> -->
-			<a href='#' class='menuLink'>ABOUT</a>
-			<a href='./graphics.html' class='menuLink'>GRAPHICS</a>
+		<div class='menuBar'>
+            <a href='./index.html' class='menuLink'>HOME</a> 
+            <a href='#.html' class='menuLink'>COCKTAILS</a>
+            <a href='#' class='menuLink'>ABOUT</a>
+            <a href='./graphics.html' class='menuLink'>GRAPHICS</a>
 		</div>
 
         
