--- a/graphics.html
+++ b/graphics.html
@@ -17,10 +17,14 @@
 		<!-- Font Awesome, for graphics icons -->
 		<script src="./lib/fontawesome.js"></script>
 
+		<!-- Fonts from Google -->
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans'>
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
+
 	</head>
 	<body>
 		
-		<div id='menuBar'>
+		<div class='menuBar'>
             <a href='./index.html' class='menuLink'>HOME</a> 
             <a href='./cocktails.html' class='menuLink'>COCKTAILS</a>
             <a href='#' class='menuLink'>ABOUT</a>
@@ -28,29 +32,38 @@
 		</div>
         <br>
 
-        <div>DIGITAL PAINTING</div>
-		<div id='mainSection' class='section'>
+        <div>PAINTING & GRAPHICS</div>
+		<div class='section'>
 			<img class='drawing-wide' src="./images/graphics/smoke_closed.png" alt="">
-			<img class='drawing-wide' src="./images/graphics/planet.png" alt="">
 
 			<img class='drawing-wide' src="./images/graphics/raissa-serious.png" alt="">
-			<img class='drawing-wide' src="./images/graphics/raissa-bed.png" alt="">
+			<!-- <img class='drawing-wide' src="./images/graphics/raissa-bed.png" alt=""> -->
 			<!-- <img class='drawing' src="./images/graphics/raissa-race.png" alt=""> -->
 
 
             <img class='drawing' src="./images/graphics/shameless_lip.png" alt="">
-            <img class='drawing' src="./images/graphics/cloudboy.png" alt="">
+            <!-- <img class='drawing' src="./images/graphics/cloudboy.png" alt=""> -->
 			<!-- <img class='drawing' src="./images/graphics/pretty-nasty.png" alt=""> -->
             <img class='drawing' src="./images/graphics/better.png" alt="">
             <img class='drawing' src="./images/graphics/banana.jpg" alt="">
-		</div>
 
-        <div>PHOTO GRAPHICS</div>
-		<div class='section'>
             <img class='drawing' src="./images/graphics/bobby.jpeg" alt="">
             <img class='drawing' src="./images/graphics/lola.jpeg" alt="">
             <img class='drawing' src="./images/graphics/lupe-sunset.jpeg" alt="">
+			<img class='drawing-wide' src="./images/graphics/planet.png" alt="">
+
 		</div>
+
+        <div>MUSIC</div>
+
+        <div id='mainSection' class='section'>
+            <img class='album-cover' src="./images/graphics/focus_cover.png" alt="">
+            <img class='album-cover' src="./images/graphics/cloudboy.png" alt="">
+			<img class='album-cover' src="./images/graphics/pretty-nasty.png" alt="">
+            <img class='album-cover' src="./images/graphics/antibitrot-cover.jpeg" alt="">
+		</div>
+
+        
 
 		<div id='overlay'>
 			<div id="popup-close" >
