--- a/about.html
+++ b/about.html
@@ -29,15 +29,47 @@
 		<script src="./lib/cocktails.js"></script>
 		<!-- Font Awesome, for graphics icons -->
 		<script src="./lib/fontawesome.js"></script>
+		<!-- Fonts from Google -->
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans'>
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
 
 	</head>
 	<body>
 
+		<div class='menuBar'>
+			<a href='./index.html' class='menuLink'>HOME</a> 
+			<a href='./misc.html' class='menuLink'>MISC</a>
+			<a href='#' class='menuLink'>ABOUT</a>
+		</div>
+		<br>
+
         <div>
-            <img width=50% src="./images/Adrian_Profile_pic.jpg" alt="">
+            <!-- <img width=25% src="./images/Adrian_Profile_pic.jpg" alt=""> -->
         </div>
+		<br>
         <div>
-            I code and make visuals, music, and music videos in NYC 
+            Hi! I'm Adrian Traviezo.
+			<br><br>
+			I am a video editor and animator with a focus on music and creative code.
+			<br><br>
+			My email is aft2115@columbia.edu.
+			<br><br>
+
+			<div>
+				<!-- <a class="socialMedia" href="https://www.instagram.com/viezzo/">
+					<i class="fa fa-instagram"></i>
+				</a> -->
+				<a class="socialMedia" href="https://www.linkedin.com/in/adrian-traviezo-721301a0">
+					<i class="fa fa-linkedin-square"></i>
+				</a>
+				<a class="socialMedia" href="https://www.youtube.com/channel/UCqnPud679rMmWPm5zAuhiMQ">
+					<span class="fa fa-youtube-play"></span>
+				</a>
+				<a class="socialMedia" href="https://soundcloud.com/aftviezzo">
+					<i class="fa fa-soundcloud"></i>
+				</a>
+			</div>
+
         </div>
 
 	</body>
