--- a/cocktails.html
+++ b/cocktails.html
@@ -40,9 +40,8 @@
 		
 		<div class='menuBar'>
             <a href='./index.html' class='menuLink'>HOME</a> 
-            <a href='#.html' class='menuLink'>COCKTAILS</a>
-            <a href='#' class='menuLink'>ABOUT</a>
-            <a href='./graphics.html' class='menuLink'>GRAPHICS</a>
+            <a href='./misc.html' class='menuLink'>MISC</a>
+            <a href='./about.html' class='menuLink'>ABOUT</a>
 		</div>
 
         
